k8s/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: your-app-name
  name: your-app-name
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  selector:
    matchLabels:
      app: your-app-name
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: your-app-name
    spec:
      containers:
      - env:
        - name: FLASK_ENV
          value: development
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              key: user
              name: postgres-credentials
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-credentials
        - name: POSTGRES_HOST
          valueFrom:
            secretKeyRef:
              key: host
              name: postgres-credentials
        - name: POSTGRES_DB
          valueFrom:
            secretKeyRef:
              key: db
              name: postgres-credentials
        image: flask-microservice_web:latest
        imagePullPolicy: Never
        name: your-app-name
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
