k8s/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: your-app-name
  labels:
    service: your-app-name
spec:
  selector:
    app: your-app-name
  ports:
  - port: 5000
    targetPort: 5000
